# RightCleaner

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
docs/: MIN-38-shell-scope.md  MIN-39-mvp-boundary.md  MIN-42-technical-architecture.md  engineering-structure.md  visual-baseline.md
docs/product/: MIN-40-information-architecture.md  MIN-45-settings-logging-diagnostics.md
specs/diagnostics/: diagnostic-bundle.schema.json  error-report.schema.json  operation-log.schema.json
specs/settings/: settings.schema.json
src/: main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  shell_menu.rs
src-tauri/src/commands/: change_history.rs  menu_items.rs  mod.rs
src-tauri/src/domain/: backup.rs  change_history.rs  menu_item.rs  mod.rs
src-tauri/src/infrastructure/: backup_repository.rs  change_history.rs  mod.rs
src-tauri/src/infrastructure/registry/: menu_item_scanner.rs  mod.rs
src/app/: App.tsx
src/shared/: change-history.ts  menu-item-query.ts  menu-item-service.test.ts  menu-item-service.ts  menu-items.test.ts  menu-items.ts
src/shell/: app-shell.tsx
src/state/: app-state.tsx
src/styles/: app.css  index.css
src/test/: setup.ts
src/theme/: theme-provider.tsx  theme-tokens.ts
src/views/: batch-review-page.tsx  cleanup-detail-page.test.tsx  cleanup-detail-page.tsx  cleanup-list-page.test.tsx  cleanup-list-page.tsx  overview-page.test.tsx  overview-page.tsx  recovery-center-page.tsx  (+1 more)
styles/: design-tokens.css
(+5 files in other folders)
