[package]
name = "rightcleaner"
version = "0.1.0"
description = "RightCleaner desktop shell"
authors = ["RightCleaner"]
edition = "2021"

[lib]
name = "rightcleaner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.6", features = [] }
winreg = "0.55"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }
